--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 <!--Input form to add more topics-->
-    <form id="add-topic">
+    <form id="add-new-topic">
         <label for="topic-input">Add an Animal</label> 
         <input type="text" id="topic-input">
         <input id="add-topic" type="submit" value="Submit">
